--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -25,4 +25,5 @@
 #:include kv/topUpSummaryPopup.kv
 #:include kv/uiElements/buttons.kv
 #:include kv/uiElements/textInputs.kv
+#:include kv/uiElements/layouts.kv
 #:include kv/editSystemSettingsScreen.kv
