--- a/GuiApp/kv/creditsAnimationPopup.kv
+++ b/GuiApp/kv/creditsAnimationPopup.kv
@@ -3,18 +3,7 @@
 <CreditsAnimationPopup>:
     size_hint: (0.8, 0.5)
     auto_dismiss: True
-    GridLayout:
-        canvas:
-            Color:
-                rgba: (1, 1, 1, 1)
-            SmoothRoundedRectangle:
-                pos: self.pos
-                size: self.size
-            Color:
-                rgba: app.colors["button"]
-            SmoothRoundedRectangle:
-                pos: (self.pos[0] + 5, self.pos[1] + 5)
-                size: (self.width - 10, self.height - 10)
+    RoundedTwoColorGridLayout:
         center_x: True
         cols: 1
         size_hint: (1, 1)
