--- a/GuiApp/kv/errorMessagePopup.kv
+++ b/GuiApp/kv/errorMessagePopup.kv
@@ -2,8 +2,13 @@
 
 <ErrorMessagePopup>:
     id: errorMessagePopup
-    title: 'Error'
     size_hint: (0.5, 0.5)
+    canvas:
+        Color:
+            rgba: app.colors["secondary_background"]
+        SmoothRoundedRectangle:
+            pos: self.pos
+            size: self.size
     GridLayout:
         cols: 1
         padding: '10dp'
