--- a/GuiApp/kv/loginScreen.kv
+++ b/GuiApp/kv/loginScreen.kv
@@ -4,40 +4,19 @@
     size_hint: None, None
     height: '120dp'
     width: '120dp'
-    on_press: root.Clicked()
-    canvas.before:
-        Color:
-            rgba: 0, 0, 0, 0.10
-        BoxShadow:
-            pos: self.pos
-            size: self.size
-            offset: 10, -10
-            blur_radius: 15
-            spread_radius: -5, -5
-            border_radius: 10, 10, 10, 10
-    canvas:
-        Color:
-            rgba: (1, 1, 1, 1)
-        SmoothRoundedRectangle:
-            pos: self.pos
-            size: self.size
-        Color:
-            rgba: app.colors["button"]
-        SmoothRoundedRectangle:
-            pos: (self.pos[0] + 5, self.pos[1] + 5)
-            size: (self.width - 10, self.height - 10)
-        
-    
-    Label:
-        id: userNameLabel
-        text: 'User'
-        text_size: self.size
-        size: self.texture_size
-        halign: 'center'
-        valign: 'center'
-        font_size: 18
-        color : [0,0,0,1]
-        bold: True
+    ClickableRoundedTwoColorGridLayout:
+        rows: 1
+        on_press: root.Clicked()
+        Label:
+            id: userNameLabel
+            text: 'User'
+            text_size: self.size
+            size: self.texture_size
+            halign: 'center'
+            valign: 'center'
+            font_size: 18
+            color : [0,0,0,1]
+            bold: True
     
 <LoginScreen>:
     GridLayout:
@@ -81,28 +60,8 @@
                 size_hint: 1, 0.3
                 anchor_x: 'center'
                 anchor_y: 'center'
-                BoxLayoutButton:
-                    canvas:
-                        Color:
-                            rgba: (1, 1, 1, 1)
-                        SmoothRoundedRectangle:
-                            pos: self.pos
-                            size: self.size
-                        Color:
-                            rgba: app.colors["button"]
-                        SmoothRoundedRectangle:
-                            pos: (self.pos[0] + 5, self.pos[1] + 5)
-                            size: (self.width - 10, self.height - 10)
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 0.10
-                        BoxShadow:
-                            pos: self.pos
-                            size: self.size
-                            offset: 10, -10
-                            blur_radius: 15
-                            spread_radius: -5, -5
-                            border_radius: 2, 2, 2, 2
+                ClickableRoundedTwoColorGridLayout:
+                    rows: 1
                     on_press: root.createNewUserButtonClicked()
                     size_hint: None, None
                     height: '80dp'
