--- a/GuiApp/kv/purchaseSummaryPopup.kv
+++ b/GuiApp/kv/purchaseSummaryPopup.kv
@@ -94,5 +94,6 @@
             size_hint: (1, None)
             height: self.minimum_height
             orientation: 'rl-tb'
-            SmallCloseButton:
+            SmallOrangeButton:
+                text: "Close"
                 on_press: root.dismiss()
