--- a/GuiApp/kv/errorMessagePopup.kv
+++ b/GuiApp/kv/errorMessagePopup.kv
@@ -26,5 +26,6 @@
             size_hint: (1, None)
             height: self.minimum_height
             orientation: 'rl-tb'
-            SmallCloseButton:
+            SmallOrangeButton:
+                text: "Close"
                 on_press: root.dismiss()
