Add insufficient funds popup

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -27,3 +27,4 @@
 #:include kv/uiElements/textInputs.kv
 #:include kv/uiElements/layouts.kv
 #:include kv/editSystemSettingsScreen.kv
+#:include kv/insufficientFundsPopup.kv
