--- a/GuiApp/kv/splashScreen.kv
+++ b/GuiApp/kv/splashScreen.kv
@@ -2,6 +2,7 @@
 
 <SplashScreenWidget>:
     Button:
+        id: splashButton
         on_press: root.onPressed()
         StackLayout:
             pos: self.parent.pos
