Add create user or link card popup

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -28,3 +28,6 @@
 #:include kv/uiElements/layouts.kv
 #:include kv/editSystemSettingsScreen.kv
 #:include kv/insufficientFundsPopup.kv
+#:include kv/createUserOrLinkCardPopup.kv
+#:include kv/linkCardScreen.kv
+#:include kv/linkCardConfirmationPopup.kv
