--- a/GuiApp/kv/loginScreen.kv
+++ b/GuiApp/kv/loginScreen.kv
@@ -1,9 +1,8 @@
 #:kivy 2.1.0
 
 <LoginScreenUserWidget>:
-    size_hint: None, None
-    height: '120dp'
-    width: '120dp'
+    size_hint_x: None
+    width: self.height
     ClickableRoundedTwoColorGridLayout:
         rows: 1
         on_press: root.Clicked()
@@ -14,10 +13,10 @@
             size: self.texture_size
             halign: 'center'
             valign: 'center'
-            font_size: 18
+            font_size: self.width/7
             color : [0,0,0,1]
             bold: True
-    
+
 <LoginScreen>:
     GridLayout:
         cols: 1
@@ -27,50 +26,46 @@
             Rectangle:
                 pos: self.pos
                 size: self.size
+        padding: 30
+        spacing: 30
+
+        Label:
+            halign: 'center'
+            size_hint_y: 0.1
+            font_size: self.width/20
+            color: 'black'
+            bold: True
+            text: "Select or create user"
+        
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
+        
+        ScrollView:
+            id: scrollView
+            size_hint_y: 0.5
+            do_scroll_y: False
+            GridLayout:
+                id: LoginScreenUserGridLayout
+                rows: 1
+                spacing: 30
+                padding: [30, 10]
+                size_hint_x: None
+                width: self.minimum_width
+        
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
+        
         GridLayout:
-            cols: 1
-            padding: [0, 40, 0, 0]
-            Label:
-                halign: 'center'
-                size_hint: (1, None)
-                height: 33
-                font_size: 32
-                color: 'black'
-                bold: True
-                text: "Select or create user"
-            AnchorLayout:
-                anchor_x: 'center'
-                anchor_y: 'center'
-                size_hint: 1, 0.7
-                ScrollView:
-                    id: scrollView
-                    size_hint: 1, None
-                    size_hint_min_x: 1
-                    height: '160dp'
-                    do_scroll_y: False
-                    GridLayout:
-                        id: LoginScreenUserGridLayout
-                        rows: 1
-                        spacing: 30
-                        padding: [30, 10]
-                        size_hint_x: None
-                        width: self.minimum_width
-                            
-            AnchorLayout:
-                size_hint: 1, 0.3
-                anchor_x: 'center'
-                anchor_y: 'center'
-                ClickableRoundedTwoColorGridLayout:
-                    rows: 1
-                    on_press: root.createNewUserButtonClicked()
-                    size_hint: None, None
-                    height: '80dp'
-                    width: '270dp'
-                      
-                    Label:
-                        id: manageDeviceCancelLabel
-                        text: 'Create new user'
-                        bold: True
-                        color: 'black'
-                        font_size: "30sp"
-                        size_hint: (1, 1)
+            rows: 1
+            size_hint_y: 0.2
+            Widget: # Vertical Spacer
+            ClickableRoundedTwoColorGridLayout:
+                rows: 1
+                on_press: root.createNewUserButtonClicked()
+                Label:
+                    id: manageDeviceCancelLabel
+                    text: 'Create new user'
+                    bold: True
+                    color: 'black'
+                    font_size: self.width/10
+            Widget: # Vertical Spacer
