--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -1,25 +1,33 @@
+#:kivy 2.1.0
+
 <CreateUserScreen>:
     GridLayout:
-        cols: 1
         canvas:
             Color:
                 rgba: app.colors["background"]
             Rectangle:
                 pos: self.pos
                 size: self.size
+        cols: 1
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
+        Label:
+            text: "Create New User"
+            bold: True
+            halign: 'center'
+            valign: 'middle'
+            font_size: min(self.height/1.3, self.width/15)
+            text_size: self.size
+            size_hint_y: 0.2
+            color: 'black'
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
         GridLayout:
-            cols: 1
-            padding: [100, 30, 100, 0]
-            spacing: 20
-
-            Label:
-                text: "Create New User"
-                bold: True
-                font_size: 32
-                size_hint_y: None
-                color: 'black'
-                height: 32
-
+            rows: 1
+            size_hint_y: None
+            height: self.minimum_height
+            Widget: # Horizontal Spacer
+                size_hint_x: 0.1
             RoundedTwoColorGridLayout:
                 cols: 1
                 spacing: 10
@@ -39,19 +47,28 @@
                     header_text: "Login card"
                     hint_text: "Blipp card to register (optional)"
                     disable_input: True
-
-            GridLayout:
-                rows: 1
-                size_hint_y: None
-                height: self.minimum_height
-                spacing: 20
-
-                LargeGreenButton:
-                    text: "Register"
-                    on_press: root.registerUser()
-                Widget: # Horizontal Spacer
-                    size_hint: (1, None)
-                    height: 100
-                LargeOrangeButton:
-                    text: "Cancel"
-                    on_press: root.cancel()
+            Widget: # Horizontal Spacer
+                size_hint_x: 0.1
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
+        GridLayout:
+            rows: 1
+            size_hint_y: None
+            height: self.minimum_height
+            Widget: # Horizontal Spacer
+                size_hint: (1, None)
+                height: 100
+            LargeGreenButton:
+                text: "Register"
+                on_press: root.registerUser()
+            Widget: # Horizontal Spacer
+                size_hint: (1, None)
+                height: 100
+            LargeOrangeButton:
+                text: "Cancel"
+                on_press: root.cancel()
+            Widget: # Horizontal Spacer
+                size_hint: (1, None)
+                height: 100
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
